opam-version: "2.0"
synopsis: "Ppx deriver for ocaml-rpc, a library to deal with RPCs in OCaml"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire, Jon Ludlam"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-rpc"
doc: "https://mirage.github.io/ocaml-rpc/ppx_deriving_rpc"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "jbuilder" {build}
  "rpclib" {>= "5.0.0"}
  "rresult"
  "ppxlib"
  "rpclib-lwt" {with-test & >= "5.0.0"}
  "rpclib-async" {with-test & >= "5.0.0"}
  "lwt" {with-test & >= "3.0.0"}
  "async" {with-test}
  "alcotest" {with-test}
]
flags: light-uninstall
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git://github.com/mirage/ocaml-rpc"
