opam-version: "2.0"
synopsis: "Ppx deriver for ocaml-rpc, a library to deal with RPCs in OCaml"
maintainer: "Marcello Seri"
authors: ["Thomas Gazagnaire" "Jon Ludlam"]
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-rpc"
doc: "https://mirage.github.io/ocaml-rpc/ppx_deriving_rpc"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
license: "ISC"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.0.0"}
  "rpclib" {= version}
  "rresult" {>= "0.3.0"}
  "ppxlib" {>= "0.18.0"}
  "lwt" {with-test & >= "3.0.0"}
  "alcotest" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git://github.com/mirage/ocaml-rpc"
description: """
`ocaml-rpc` is a library that provides remote procedure calls (RPC)
using XML or JSON as transport encodings, and multiple generators
for documentations, clients, servers, javascript bindings, python
bindings, ...

The transport mechanism itself is outside the scope of this library
as all conversions are from and to strings.
"""
x-maintenance-intent: [ "(latest)" ]