opam-version: "2.0"
synopsis: "A library to deal with RPCs in OCaml - meta-package"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire, Jon Ludlam"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-rpc"
doc: "https://mirage.github.io/ocaml-rpc/rpc"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {build & >= "1.1.0"}
  "rpclib" {>= "5.0.0"}
  "rpclib-async" {>= "5.0.0"}
  "rpclib-lwt" {>= "5.0.0"}
  "ppx_deriving_rpc" {>= "5.0.0"}
  "async" {>= "v0.9.0" & <= "v0.11.0"}
  "lwt"
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
]
conflicts: [
  "core" {< "v0.9.0"}
]
flags: light-uninstall
build: [
    ["dune" "runtest" "-p" name] {with-test}
    ["dune" "build" "@doc"] {with-doc}
]
dev-repo: "git://github.com/mirage/ocaml-rpc"
