opam-version: "2.0"
synopsis: "A library to deal with RPCs in OCaml - meta-package"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire, Jon Ludlam"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-rpc"
doc: "https://mirage.github.io/ocaml-rpc/rpc"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {>= "2.0.0"}
  "rpclib" {=version}
  "rpclib-async" {=version}
  "rpclib-lwt" {=version}
  "ppx_deriving_rpc" {=version}
  "async" {>= "v0.9.0"}
  "lwt"
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
  "md2mld" {with-doc & >= "0.3.0"}
  "odoc" {with-doc}
]
conflicts: [
  "core" {< "v0.9.0"}
]
build: [
    ["dune" "runtest" "-p" name] {with-test}
    ["dune" "build" "@doc"] {with-doc}
]
dev-repo: "git://github.com/mirage/ocaml-rpc"
description: """
`ocaml-rpc` is a library that provides remote procedure calls (RPC)
using XML or JSON as transport encodings, and multiple generators
for documentations, clients, servers, javascript bindings, python
bindings, ...

The transport mechanism itself is outside the scope of this library
as all conversions are from and to strings.

This is a dummy package installing the main library components.
"""
