opam-version: "2.0"
synopsis: "A library to deal with RPCs in OCaml - meta-package"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire, Jon Ludlam"
tags: ["org:mirage" "org:xapi-project" "deprecated"]
homepage: "https://github.com/mirage/ocaml-rpc"
doc: "https://mirage.github.io/ocaml-rpc/rpc"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
license: "ISC"
depends: [
  "ocaml" {>= "4.04.1"}
  "dune" {>= "2.0.0"}
  "rpclib" {=version}
  "rpclib-lwt" {=version}
  "ppx_deriving_rpc" {=version}
  "alcotest" {with-test}
  "md2mld" {with-doc & >= "0.4.0"}
  "conf-which" {with-test}
  "odoc" {with-doc}
]
build: [
    ["dune" "runtest" "-p" name "-j" jobs] {with-test}
    ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
dev-repo: "git://github.com/mirage/ocaml-rpc"
description: """
`ocaml-rpc` is a library that provides remote procedure calls (RPC)
using XML or JSON as transport encodings, and multiple generators
for documentations, clients, servers, javascript bindings, python
bindings, ...

The transport mechanism itself is outside the scope of this library
as all conversions are from and to strings.

This is a dummy package installing the main library components.
"""
post-messages: ["DEPRECATED. This package is a virtual package and is outdated, you should consider using directly rpclib, rpclib-lwt, rpclib-async and ppx_deriving_rpc instead"]