opam-version: "2.0"
synopsis: "A library to deal with RPCs in OCaml - Async interface"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire, Jon Ludlam"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-rpc"
doc: "https://mirage.github.io/ocaml-rpc/rpclib-async"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
depends: [
  "ocaml"
  "alcotest" {with-test}
  "jbuilder" {build}
  "rpclib" {>= "5.0.0"}
  "async"
]
conflicts: [
  "core" {< "v0.9.0"}
]
flags: light-uninstall
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name] {with-test}
]
dev-repo: "git://github.com/mirage/ocaml-rpc"
