opam-version: "2.0"
synopsis: "A library to deal with RPCs in OCaml - Async interface"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire, Jon Ludlam"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-rpc"
doc: "https://mirage.github.io/ocaml-rpc/rpclib-async"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
depends: [
  "ocaml"
  "alcotest" {with-test}
  "dune" {>= "1.5.0"}
  "rpclib" {=version}
  "async"
]
conflicts: [
  "core" {< "v0.9.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git://github.com/mirage/ocaml-rpc"
