opam-version: "2.0"
synopsis: "A library to deal with RPCs in OCaml - Async interface"
maintainer: "Marcello Seri"
authors: ["Thomas Gazagnaire" "Jon Ludlam"]
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-rpc"
doc: "https://mirage.github.io/ocaml-rpc/rpclib-async"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
license: "ISC"
depends: [
  "ocaml" { >= "5.3.0" }
  "alcotest" {with-test}
  "dune" {>= "2.0.0"}
  "rpclib" {=version}
  "async" {>= "v0.9.0"}
  "ppx_deriving_rpc" {with-test & =version}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/ocaml-rpc.git"
description: """
`ocaml-rpc` is a library that provides remote procedure calls (RPC)
using XML or JSON as transport encodings, and multiple generators
for documentations, clients, servers, javascript bindings, python
bindings, ...

The transport mechanism itself is outside the scope of this library
as all conversions are from and to strings.
"""
x-maintenance-intent: [ "(latest)" ]