opam-version: "2.0"
synopsis:
  "A library to deal with RPCs in OCaml - html documentation generator"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire, Jon Ludlam"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-rpc"
doc: "https://mirage.github.io/ocaml-rpc/rpclib-html"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
depends: [
  "ocaml"
  "dune" {>= "1.1.0"}
  "rpclib" {>= "5.0.0"}
  "cow"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git://github.com/mirage/ocaml-rpc"
