opam-version: "2.0"
synopsis: "A library to deal with RPCs in OCaml - Bindings for js_of_ocaml"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire, Jon Ludlam"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-rpc"
doc: "https://mirage.github.io/ocaml-rpc/rpclib-js"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
depends: [
  "ocaml"
  "dune" {>= "1.5.0"}
  "rpclib" {=version}
  "js_of_ocaml" {>= "3.5.0"}
  "js_of_ocaml-ppx" {>= "3.5.0"}
  "lwt"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git://github.com/mirage/ocaml-rpc"
description: """
`ocaml-rpc` is a library that provides remote procedure calls (RPC)
using XML or JSON as transport encodings, and multiple generators
for documentations, clients, servers, javascript bindings, python
bindings, ...

The transport mechanism itself is outside the scope of this library
as all conversions are from and to strings.
"""
