opam-version: "2.0"
synopsis: "A library to deal with RPCs in OCaml - Lwt interface"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire, Jon Ludlam"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-rpc"
doc: "https://mirage.github.io/ocaml-rpc/rpclib-lwt"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
depends: [
  "ocaml"
  "alcotest" {with-test}
  "dune" {build & >= "1.1.0"}
  "rpclib" {>= "5.0.0"}
  "lwt" {>= "3.0.0"}
  "alcotest-lwt" {with-test}
]
flags: light-uninstall
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git://github.com/mirage/ocaml-rpc"
