opam-version: "2.0"
synopsis: "A library to deal with RPCs in OCaml"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire, Jon Ludlam"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-rpc"
doc: "https://mirage.github.io/ocaml-rpc/rpclib"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
depends: [
  "ocaml" {>= "4.04.0"}
  "alcotest" {with-test}
  "dune" {build & >= "1.1.0"}
  "cmdliner"
  "rresult"
  "xmlm"
  "yojson"
]
flags: light-uninstall
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git://github.com/mirage/ocaml-rpc"
