opam-version: "2.0"
synopsis: "A library to deal with RPCs in OCaml"
maintainer: "Marcello Seri"
authors: ["Thomas Gazagnaire" "Jon Ludlam"]
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-rpc"
doc: "https://mirage.github.io/ocaml-rpc/rpclib"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
license: "ISC"
depends: [
  "ocaml" {>= "4.08.0"}
  "alcotest" {with-test}
  "dune" {>= "2.0.0"}
  "base64" {>= "3.4.0"}
  "cmdliner" {>= "1.1.0"}
  "rresult" {>= "0.3.0"}
  "result" {>= "1.5"}
  "xmlm"
  "yojson" {>= "1.7.0"}
]
conflicts: [
   "result" {< "1.5"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git://github.com/mirage/ocaml-rpc"
description: """
`ocaml-rpc` is a library that provides remote procedure calls (RPC)
using XML or JSON as transport encodings, and multiple generators
for documentations, clients, servers, javascript bindings, python
bindings, ...

The transport mechanism itself is outside the scope of this library
as all conversions are from and to strings.
"""
x-maintenance-intent: [ "(latest)" ]