(executable
 (name suite)
 (flags :standard -warn-error +a -w -27-33-39)
 (libraries alcotest result rpclib rpclib.core rpclib.json rpclib.dbgen rresult)
 (preprocess
  (pps ppx_deriving_rpc)
 )
)

(alias
 (name runtest)
 (deps
  (:s suite.exe)
 )
 (package ppx_deriving_rpc)
 (action
  (run %{s})
 )
)
