(executable
 (name suite)
 (libraries alcotest alcotest-lwt lwt.unix rpclib
   rpclib-lwt rpclib.json threads)
 (modules :standard \ suite_async client_async_new)
 (preprocess
  (pps ppx_deriving_rpc)))

(executable
 (name suite_async)
 (libraries alcotest async rpclib rpclib-async rpclib.json threads)
 (modules suite_async client_async_new)
 (preprocess
  (pps ppx_deriving_rpc)))

(rule
 (alias runtest)
 (package rpc)
 (deps
  (:s suite.exe)
  (source_tree .))
 (action
  (run %{s})))

(rule
 (alias runtest)
 (package rpclib-async)
 (deps
  (:s suite_async.exe)
  (source_tree .))
 (action
  (run %{s})))